# LearnOpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.glsl  shader.hpp
inc/: camera.hpp  meshes.hpp  models.hpp  shader.hpp
resources/models/Ganyu/: 甘雨.pmx
resources/models/ganyu/: quick guide.txt
resourses/models/: Ganyu.fbx
shaders/: lightShader.fs  modelLightShader.fs  modelLightShader.vs  modelShader.fs  modelShader.vs  screenShader.fs  shader.fs  shader.vs  shaderSingleColor.fs  skyboxShader.fs  skyboxShader.vs
src/: main.cpp
thirdclass/: glad.c
thirdclass/glad/: glad.h
thirdclass/stb/: stb_image.cpp
